--- a/wercker.yml
+++ b/wercker.yml
@@ -21,10 +21,11 @@ deploy-github:
     - script:
       name: package
       code: |
-        tar -czf wiki-js.tar.gz * -X .build/.deployexclude
+        tar -czfv wiki-js.tar.gz * -X .build/.deployexclude
         yarn install --production --ignore-scripts --prefer-offline
-        tar -czf node_modules.tar.gz node_modules
+        tar -czfv node_modules.tar.gz node_modules
         SEMVER_LAST=`npm show wiki.js version`
+        chmod +x ./.build/semver_next.sh
         SEMVER_NEXT=`./.build/semver_next.sh -p $SEMVER_LAST`
     - github-create-release:
       token: $GITHUB_TOKEN
