--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node": ">=4.6"
   },
   "dependencies": {
+    "apollo-server-express": "~1.0.4",
     "auto-load": "~3.0.0",
     "axios": "~0.16.2",
     "bcryptjs-then": "~1.0.1",
@@ -62,6 +63,7 @@
     "follow-redirects": "~1.2.4",
     "fs-extra": "~4.0.0",
     "git-wrapper2-promise": "~0.2.9",
+    "graphql": "~0.10.5",
     "highlight.js": "~9.12.0",
     "i18next": "~8.4.3",
     "i18next-express-middleware": "~1.0.5",
