--- a/npm/package.json
+++ b/npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wiki.js",
-  "version": "1.0.5",
+  "version": "1.0.5-rev.1",
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "install.js",
   "scripts": {
@@ -28,16 +28,5 @@
     "url": "https://github.com/Requarks/wiki/issues"
   },
   "homepage": "https://github.com/Requarks/wiki#readme",
-  "dependencies": {
-    "bluebird": "~3.5.0",
-    "colors": "~1.1.2",
-    "execa": "~0.7.0",
-    "follow-redirects": "~1.2.4",
-    "fs-extra": "~3.0.1",
-    "inquirer": "~3.1.1",
-    "lodash": "~4.17.4",
-    "ora": "~1.3.0",
-    "pm2": "~2.5.0",
-    "tar": "~3.1.5"
-  }
+  "dependencies": {}
 }
