--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ cache: yarn
 before_script:
 - yarn run build
 before_deploy:
-- tar -czf wiki-js.tar.gz * -X .build/.deployexclude
+- tar -chzf wiki-js.tar.gz * -X .build/.deployexclude
 - yarn install --production --ignore-scripts --prefer-offline
-- tar -czf node_modules.tar.gz -C node_modules .
+- tar -chzf node_modules.tar.gz -C node_modules .
 deploy:
   provider: releases
   api_key:
