fix: wercker fixes

--- a/wercker.yml
+++ b/wercker.yml
@@ -30,7 +30,7 @@ build:
 deploy-docker-master:
   box: node:8-alpine
   steps:
-    - internal/docker-push:
+    - internal/docker-scratch-push:
         username: $DOCKER_HUB_USERNAME
         password: $DOCKER_HUB_PASSWORD
         tag: latest, master
@@ -42,7 +42,7 @@ deploy-docker-master:
 deploy-docker-dev:
   box: node:8-alpine
   steps:
-    - internal/docker-push:
+    - internal/docker-scratch-push:
         username: $DOCKER_HUB_USERNAME
         password: $DOCKER_HUB_PASSWORD
         tag: dev
