refactor: Moved all dev/docker files to /tools folder

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node wiki start",
     "stop": "node wiki stop",
     "restart": "node wiki restart",
-    "build": "node fuse",
-    "dev": "node fuse -d",
-    "dev-configure": "node fuse -c",
+    "build": "node tools/fuse",
+    "dev": "node tools/fuse -d",
+    "dev-configure": "node tools/fuse -c",
     "test": "jest"
   },
   "bin": {
