fix: Azure client ID typo

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -89,7 +89,7 @@ auth:
     tlsCertPath: C:\example\root_ca_cert.crt
   azure:
     enabled: false
-    clientID: APP_ID
+    clientId: APP_ID
     clientSecret: APP_SECRET_KEY
     resource: '00000002-0000-0000-c000-000000000000'
     tenant: 'YOUR_TENANT.onmicrosoft.com'
