--- a/wercker.yml
+++ b/wercker.yml
@@ -76,9 +76,8 @@ deploy-github:
     - script:
       name: package
       code: |
-        ls
-        tar -chzfv wiki-js.tar.gz assets server config.sample.yml package.json wiki.js LICENSE
-        tar -chzfv node_modules.tar.gz node_modules
+        tar -chzvf wiki-js.tar.gz assets server config.sample.yml package.json wiki.js LICENSE
+        tar -chzvf node_modules.tar.gz node_modules
         SEMVER_LAST=`npm show wiki.js version`
         chmod +x ./tools/semver_next.sh
         SEMVER_NEXT=`./tools/semver_next.sh -p $SEMVER_LAST`
