--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -61,6 +61,7 @@ defaults:
       primary: indigo
       alt: blue-grey
       footer: blue-grey
+      viewSource: "none"
       code:
         dark: true
         colorize: true
