--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "node": ">=6.11.1"
   },
   "dependencies": {
-    "apollo-server-express": "1.1.0",
+    "apollo-server-express": "1.1.2",
     "auto-load": "3.0.0",
     "axios": "0.16.2",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.0",
     "body-parser": "1.17.2",
-    "bull": "3.0.0-rc.7",
+    "bull": "3.0.0",
     "bunyan": "1.8.12",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
@@ -63,10 +63,10 @@
     "follow-redirects": "1.2.4",
     "fs-extra": "4.0.1",
     "git-wrapper2-promise": "0.2.9",
-    "graphql": "0.10.5",
-    "graphql-tools": "1.2.1",
+    "graphql": "0.11.2",
+    "graphql-tools": "1.2.2",
     "highlight.js": "9.12.0",
-    "i18next": "8.4.3",
+    "i18next": "9.0.0",
     "i18next-express-middleware": "1.0.5",
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.1",
@@ -77,19 +77,19 @@
     "klaw": "2.1.0",
     "levelup": "1.3.9",
     "lodash": "4.17.4",
-    "markdown-it": "8.3.2",
+    "markdown-it": "8.4.0",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-anchor": "4.0.0",
-    "markdown-it-attrs": "1.0.0",
+    "markdown-it-attrs": "1.1.0",
     "markdown-it-emoji": "1.4.0",
     "markdown-it-expand-tabs": "1.0.12",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "3.0.1",
     "markdown-it-mathjax": "2.0.0",
     "markdown-it-task-lists": "2.0.1",
-    "mathjax-node": "1.1.1",
+    "mathjax-node": "1.2.0",
     "memdown": "1.2.4",
-    "mime-types": "2.1.16",
+    "mime-types": "2.1.17",
     "moment": "2.18.1",
     "moment-timezone": "0.5.13",
     "multer": "1.3.0",
@@ -106,9 +106,9 @@
     "passport-slack": "0.0.7",
     "passport-windowslive": "1.0.2",
     "passport.socketio": "3.7.0",
-    "pg": "7.1.2",
+    "pg": "7.3.0",
     "pg-hstore": "2.3.2",
-    "pg-promise": "6.5.0",
+    "pg-promise": "6.5.1",
     "pm2": "2.6.1",
     "pug": "2.0.0-rc.3",
     "read-chunk": "2.1.0",
@@ -117,15 +117,15 @@
     "search-index-adder": "0.3.9",
     "search-index-searcher": "0.2.10",
     "semver": "5.4.1",
-    "sequelize": "4.5.0",
+    "sequelize": "4.8.0",
     "serve-favicon": "2.4.3",
     "simplemde": "1.11.2",
     "socket.io": "2.0.3",
     "stopword": "0.1.6",
     "stream-to-promise": "2.2.0",
-    "tar": "4.0.0",
+    "tar": "4.0.1",
     "through2": "2.0.3",
-    "validator": "8.0.0",
+    "validator": "8.1.0",
     "validator-as-promised": "1.0.2",
     "winston": "2.3.1",
     "yargs": "8.0.2"
@@ -134,21 +134,21 @@
     "@glimpse/glimpse": "0.22.15",
     "@panter/vue-i18next": "0.5.1",
     "babel-cli": "6.26.0",
-    "babel-jest": "20.0.3",
+    "babel-jest": "21.0.0",
     "babel-plugin-transform-object-assign": "6.22.0",
     "babel-preset-es2015": "6.24.1",
     "brace": "0.10.0",
     "colors": "1.1.2",
     "consolidate": "0.14.5",
-    "eslint": "4.4.1",
+    "eslint": "4.6.1",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-node": "5.1.1",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
-    "fuse-box": "2.2.2",
+    "fuse-box": "2.2.3",
     "i18next-xhr-backend": "1.4.2",
-    "jest": "20.0.4",
+    "jest": "21.0.0",
     "jquery": "3.2.1",
     "jquery-contextmenu": "2.5.0",
     "jquery-simple-upload": "1.0.0",
@@ -158,18 +158,18 @@
     "lodash-es": "4.17.4",
     "node-sass": "4.5.3",
     "nodemon": "1.11.0",
-    "pug-lint": "2.4.0",
+    "pug-lint": "2.5.0",
     "twemoji-awesome": "1.0.6",
-    "typescript": "2.4.2",
-    "uglify-es": "3.0.27",
-    "vee-validate": "2.0.0-rc.13",
+    "typescript": "2.5.2",
+    "uglify-es": "3.0.28",
+    "vee-validate": "2.0.0-rc.14",
     "vue": "2.4.2",
     "vue-clipboards": "1.1.0",
     "vue-lodash": "1.0.3",
     "vue-resource": "1.3.4",
     "vue-template-compiler": "2.4.2",
     "vue-template-es2015-compiler": "1.5.3",
-    "vuex": "2.3.1"
+    "vuex": "2.4.0"
   },
   "jest": {
     "collectCoverage": false,
