--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "axios": "0.16.2",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.0",
-    "body-parser": "1.17.2",
-    "bull": "3.0.0",
+    "body-parser": "1.18.0",
+    "bull": "3.1.0",
     "bunyan": "1.8.12",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
@@ -63,7 +63,7 @@
     "follow-redirects": "1.2.4",
     "fs-extra": "4.0.1",
     "git-wrapper2-promise": "0.2.9",
-    "graphql": "0.11.2",
+    "graphql": "0.11.3",
     "graphql-tools": "1.2.2",
     "highlight.js": "9.12.0",
     "i18next": "9.0.0",
@@ -73,7 +73,7 @@
     "ioredis": "3.1.4",
     "jimp": "0.2.28",
     "js-yaml": "3.9.1",
-    "jsonwebtoken": "7.4.3",
+    "jsonwebtoken": "8.0.0",
     "klaw": "2.1.0",
     "levelup": "1.3.9",
     "lodash": "4.17.4",
@@ -88,7 +88,7 @@
     "markdown-it-mathjax": "2.0.0",
     "markdown-it-task-lists": "2.0.1",
     "mathjax-node": "1.2.0",
-    "memdown": "1.2.4",
+    "memdown": "1.2.7",
     "mime-types": "2.1.17",
     "moment": "2.18.1",
     "moment-timezone": "0.5.13",
@@ -108,24 +108,24 @@
     "passport.socketio": "3.7.0",
     "pg": "7.3.0",
     "pg-hstore": "2.3.2",
-    "pg-promise": "6.5.1",
+    "pg-promise": "6.5.2",
     "pm2": "2.6.1",
-    "pug": "2.0.0-rc.3",
+    "pug": "2.0.0-rc.4",
     "read-chunk": "2.1.0",
     "remove-markdown": "0.2.2",
     "request": "2.81.0",
     "search-index-adder": "0.3.9",
     "search-index-searcher": "0.2.10",
     "semver": "5.4.1",
-    "sequelize": "4.8.0",
+    "sequelize": "4.8.2",
     "serve-favicon": "2.4.3",
     "simplemde": "1.11.2",
     "socket.io": "2.0.3",
-    "stopword": "0.1.6",
+    "stopword": "0.1.7",
     "stream-to-promise": "2.2.0",
     "tar": "4.0.1",
     "through2": "2.0.3",
-    "validator": "8.1.0",
+    "validator": "8.2.0",
     "validator-as-promised": "1.0.2",
     "winston": "2.3.1",
     "yargs": "8.0.2"
@@ -134,7 +134,7 @@
     "@glimpse/glimpse": "0.22.15",
     "@panter/vue-i18next": "0.5.1",
     "babel-cli": "6.26.0",
-    "babel-jest": "21.0.0",
+    "babel-jest": "21.0.2",
     "babel-plugin-transform-object-assign": "6.22.0",
     "babel-preset-es2015": "6.24.1",
     "brace": "0.10.0",
@@ -146,18 +146,18 @@
     "eslint-plugin-node": "5.1.1",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
-    "fuse-box": "2.2.3",
+    "fuse-box": "^2.2.31",
     "i18next-xhr-backend": "1.4.2",
-    "jest": "21.0.0",
+    "jest": "21.0.2",
     "jquery": "3.2.1",
-    "jquery-contextmenu": "2.5.0",
+    "jquery-contextmenu": "2.6.2",
     "jquery-simple-upload": "1.0.0",
     "jquery-smooth-scroll": "2.2.0",
     "jquery-sticky": "1.0.4",
     "lodash-cli": "4.17.4",
     "lodash-es": "4.17.4",
     "node-sass": "4.5.3",
-    "nodemon": "1.11.0",
+    "nodemon": "1.12.0",
     "pug-lint": "2.5.0",
     "twemoji-awesome": "1.0.6",
     "typescript": "2.5.2",
