feat: GraphQL translations + login form

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "connect-redis": "3.3.0",
     "cookie-parser": "1.4.3",
     "diff2html": "2.3.0",
+    "dotize": "^0.2.0",
     "execa": "0.8.0",
     "express": "4.15.4",
     "express-brute": "1.0.1",
@@ -68,6 +69,7 @@
     "highlight.js": "9.12.0",
     "i18next": "9.0.0",
     "i18next-express-middleware": "1.0.5",
+    "i18next-localstorage-cache": "^1.1.1",
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.1",
     "ioredis": "3.1.4",
@@ -105,7 +107,6 @@
     "passport-local": "1.0.0",
     "passport-slack": "0.0.7",
     "passport-windowslive": "1.0.2",
-    "passport.socketio": "3.7.0",
     "pg": "7.3.0",
     "pg-hstore": "2.3.2",
     "pg-promise": "6.5.2",
@@ -120,7 +121,6 @@
     "sequelize": "4.8.2",
     "serve-favicon": "2.4.3",
     "simplemde": "1.11.2",
-    "socket.io": "2.0.3",
     "stopword": "0.1.7",
     "stream-to-promise": "2.2.0",
     "tar": "4.0.1",
@@ -133,6 +133,7 @@
   "devDependencies": {
     "@glimpse/glimpse": "0.22.15",
     "@panter/vue-i18next": "0.5.1",
+    "apollo-client": "^1.9.3",
     "babel-cli": "6.26.0",
     "babel-jest": "21.0.2",
     "babel-plugin-transform-object-assign": "6.22.0",
@@ -147,6 +148,7 @@
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
     "fuse-box": "^2.2.31",
+    "graphql-tag": "^2.4.2",
     "i18next-xhr-backend": "1.4.2",
     "jest": "21.0.2",
     "jquery": "3.2.1",
@@ -166,6 +168,7 @@
     "vue": "2.4.2",
     "vue-clipboards": "1.1.0",
     "vue-lodash": "1.0.3",
+    "vue-material": "^0.7.5",
     "vue-resource": "1.3.4",
     "vue-template-compiler": "2.4.2",
     "vue-template-es2015-compiler": "1.5.3",
