--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wiki",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "wiki.js",
   "scripts": {
@@ -42,55 +42,55 @@
     "axios": "0.16.2",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.0",
-    "body-parser": "1.18.0",
-    "bull": "3.1.0",
+    "body-parser": "1.18.2",
+    "bull": "3.2.0",
     "bunyan": "1.8.12",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
     "chokidar": "1.7.0",
-    "compression": "1.7.0",
+    "compression": "1.7.1",
     "connect-flash": "0.1.1",
-    "connect-redis": "3.3.0",
+    "connect-redis": "3.3.2",
     "cookie-parser": "1.4.3",
     "diff2html": "2.3.0",
     "dotize": "^0.2.0",
     "execa": "0.8.0",
-    "express": "4.15.4",
+    "express": "4.16.1",
     "express-brute": "1.0.1",
     "express-brute-redis": "0.0.1",
-    "express-session": "1.15.5",
-    "file-type": "6.1.0",
+    "express-session": "1.15.6",
+    "file-type": "6.2.0",
     "filesize.js": "1.0.2",
     "follow-redirects": "1.2.4",
-    "fs-extra": "4.0.1",
+    "fs-extra": "4.0.2",
     "git-wrapper2-promise": "0.2.9",
-    "graphql": "0.11.3",
-    "graphql-tools": "1.2.2",
+    "graphql": "0.11.6",
+    "graphql-tools": "1.2.3",
     "highlight.js": "9.12.0",
     "i18next": "9.0.0",
-    "i18next-express-middleware": "1.0.5",
+    "i18next-express-middleware": "1.0.6",
     "i18next-localstorage-cache": "^1.1.1",
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.1",
     "ioredis": "3.1.4",
     "jimp": "0.2.28",
-    "js-yaml": "3.9.1",
-    "jsonwebtoken": "8.0.0",
+    "js-yaml": "3.10.0",
+    "jsonwebtoken": "8.0.1",
     "klaw": "2.1.0",
     "levelup": "1.3.9",
     "lodash": "4.17.4",
     "markdown-it": "8.4.0",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-anchor": "4.0.0",
-    "markdown-it-attrs": "1.1.0",
+    "markdown-it-attrs": "1.2.0",
     "markdown-it-emoji": "1.4.0",
     "markdown-it-expand-tabs": "1.0.12",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "3.0.1",
     "markdown-it-mathjax": "2.0.0",
     "markdown-it-task-lists": "2.0.1",
-    "mathjax-node": "1.2.0",
-    "memdown": "1.2.7",
+    "mathjax-node": "1.2.1",
+    "memdown": "1.3.1",
     "mime-types": "2.1.17",
     "moment": "2.18.1",
     "moment-timezone": "0.5.13",
@@ -101,7 +101,7 @@
     "passport": "0.4.0",
     "passport-azure-ad-oauth2": "0.0.4",
     "passport-facebook": "2.1.1",
-    "passport-github2": "0.1.10",
+    "passport-github2": "0.1.11",
     "passport-google-oauth20": "1.0.0",
     "passport-ldapauth": "2.0.0",
     "passport-local": "1.0.0",
@@ -109,48 +109,48 @@
     "passport-windowslive": "1.0.2",
     "pg": "7.3.0",
     "pg-hstore": "2.3.2",
-    "pg-promise": "6.5.2",
-    "pm2": "2.6.1",
+    "pg-promise": "6.10.1",
+    "pm2": "2.7.1",
     "pug": "2.0.0-rc.4",
     "read-chunk": "2.1.0",
     "remove-markdown": "0.2.2",
-    "request": "2.81.0",
+    "request": "2.83.0",
     "search-index-adder": "0.3.9",
     "search-index-searcher": "0.2.10",
     "semver": "5.4.1",
-    "sequelize": "4.8.2",
-    "serve-favicon": "2.4.3",
+    "sequelize": "4.11.5",
+    "serve-favicon": "2.4.5",
     "simplemde": "1.11.2",
-    "stopword": "0.1.7",
+    "stopword": "0.1.8",
     "stream-to-promise": "2.2.0",
     "tar": "4.0.1",
     "through2": "2.0.3",
-    "validator": "8.2.0",
+    "validator": "9.0.0",
     "validator-as-promised": "1.0.2",
     "winston": "2.3.1",
-    "yargs": "8.0.2"
+    "yargs": "9.0.1"
   },
   "devDependencies": {
     "@glimpse/glimpse": "0.22.15",
-    "@panter/vue-i18next": "0.5.1",
+    "@panter/vue-i18next": "0.6.1",
     "apollo-client": "^1.9.3",
     "babel-cli": "6.26.0",
-    "babel-jest": "21.0.2",
+    "babel-jest": "21.2.0",
     "babel-plugin-transform-object-assign": "6.22.0",
     "babel-preset-es2015": "6.24.1",
     "brace": "0.10.0",
     "colors": "1.1.2",
     "consolidate": "0.14.5",
-    "eslint": "4.6.1",
+    "eslint": "4.8.0",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-node": "5.1.1",
+    "eslint-plugin-node": "5.2.0",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
-    "fuse-box": "^2.2.31",
+    "fuse-box": "2.2.31",
     "graphql-tag": "^2.4.2",
-    "i18next-xhr-backend": "1.4.2",
-    "jest": "21.0.2",
+    "i18next-xhr-backend": "1.4.3",
+    "jest": "21.2.1",
     "jquery": "3.2.1",
     "jquery-contextmenu": "2.6.2",
     "jquery-simple-upload": "1.0.0",
@@ -159,20 +159,20 @@
     "lodash-cli": "4.17.4",
     "lodash-es": "4.17.4",
     "node-sass": "4.5.3",
-    "nodemon": "1.12.0",
+    "nodemon": "1.12.1",
     "pug-lint": "2.5.0",
     "twemoji-awesome": "1.0.6",
-    "typescript": "2.5.2",
-    "uglify-es": "3.0.28",
-    "vee-validate": "2.0.0-rc.14",
-    "vue": "2.4.2",
+    "typescript": "2.5.3",
+    "uglify-es": "3.1.2",
+    "vee-validate": "2.0.0-rc.18",
+    "vue": "2.4.4",
     "vue-clipboards": "1.1.0",
-    "vue-lodash": "1.0.3",
+    "vue-lodash": "1.0.4",
     "vue-material": "^0.7.5",
     "vue-resource": "1.3.4",
-    "vue-template-compiler": "2.4.2",
+    "vue-template-compiler": "2.4.4",
     "vue-template-es2015-compiler": "1.5.3",
-    "vuex": "2.4.0"
+    "vuex": "2.4.1"
   },
   "jest": {
     "collectCoverage": false,
