feat: fusebox updates + vue-component-plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,14 @@
 {
-  "extends": "standard",
+  "extends": "requarks",
   "env": {
     "node": true,
     "es6": true,
     "jest": true
   },
   "globals": {
-    // Client
     "document": false,
     "navigator": false,
     "window": false,
-    "siteLang": false,
-    "socket": true,
-    "wikijs": true,
-    "FuseBox": false,
-    // Server
-    "appconfig": true,
-    "appdata": true,
-    "ROOTPATH": true,
-    "SERVERPATH": true,
-    "IS_DEBUG": true
-  },
-  "rules": {
-    "space-before-function-paren": 0
+    "FuseBox": false
   }
 }
