--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "restart": "node wiki restart",
     "build": "node tools/fuse",
     "dev": "node tools/fuse -d",
-    "dev-configure": "node tools/fuse -c",
     "test": "jest"
   },
   "bin": {
@@ -37,11 +36,11 @@
     "node": ">=6.11.1"
   },
   "dependencies": {
-    "apollo-server-express": "1.1.2",
+    "apollo-server-express": "1.1.3",
     "auto-load": "3.0.0",
     "axios": "0.16.2",
     "bcryptjs-then": "1.0.1",
-    "bluebird": "3.5.0",
+    "bluebird": "3.5.1",
     "body-parser": "1.18.2",
     "bull": "3.2.0",
     "bunyan": "1.8.12",
@@ -52,7 +51,7 @@
     "connect-flash": "0.1.1",
     "connect-redis": "3.3.2",
     "cookie-parser": "1.4.3",
-    "diff2html": "2.3.0",
+    "diff2html": "2.3.1",
     "dotize": "^0.2.0",
     "execa": "0.8.0",
     "express": "4.16.1",
@@ -61,15 +60,15 @@
     "express-session": "1.15.6",
     "file-type": "6.2.0",
     "filesize.js": "1.0.2",
-    "follow-redirects": "1.2.4",
+    "follow-redirects": "1.2.5",
     "fs-extra": "4.0.2",
     "git-wrapper2-promise": "0.2.9",
-    "graphql": "0.11.6",
-    "graphql-tools": "1.2.3",
+    "graphql": "0.10.5",
+    "graphql-tools": "2.2.1",
     "highlight.js": "9.12.0",
-    "i18next": "9.0.0",
-    "i18next-express-middleware": "1.0.6",
-    "i18next-localstorage-cache": "^1.1.1",
+    "i18next": "9.0.1",
+    "i18next-express-middleware": "1.0.7",
+    "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.1",
     "ioredis": "3.1.4",
@@ -90,7 +89,7 @@
     "markdown-it-mathjax": "2.0.0",
     "markdown-it-task-lists": "2.0.1",
     "mathjax-node": "1.2.1",
-    "memdown": "1.3.1",
+    "memdown": "1.4.1",
     "mime-types": "2.1.17",
     "moment": "2.18.1",
     "moment-timezone": "0.5.13",
@@ -109,7 +108,7 @@
     "passport-windowslive": "1.0.2",
     "pg": "7.3.0",
     "pg-hstore": "2.3.2",
-    "pg-promise": "6.10.1",
+    "pg-promise": "6.10.3",
     "pm2": "2.7.1",
     "pug": "2.0.0-rc.4",
     "read-chunk": "2.1.0",
@@ -118,7 +117,7 @@
     "search-index-adder": "0.3.9",
     "search-index-searcher": "0.2.10",
     "semver": "5.4.1",
-    "sequelize": "4.11.5",
+    "sequelize": "4.13.5",
     "serve-favicon": "2.4.5",
     "simplemde": "1.11.2",
     "stopword": "0.1.8",
@@ -127,52 +126,56 @@
     "through2": "2.0.3",
     "validator": "9.0.0",
     "validator-as-promised": "1.0.2",
-    "winston": "2.3.1",
+    "winston": "2.4.0",
     "yargs": "9.0.1"
   },
   "devDependencies": {
     "@glimpse/glimpse": "0.22.15",
     "@panter/vue-i18next": "0.6.1",
     "apollo-client": "^1.9.3",
+    "autoprefixer": "7.1.5",
     "babel-cli": "6.26.0",
     "babel-jest": "21.2.0",
-    "babel-plugin-transform-object-assign": "6.22.0",
+    "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
     "brace": "0.10.0",
     "colors": "1.1.2",
     "consolidate": "0.14.5",
     "eslint": "4.8.0",
+    "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-node": "5.2.0",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
-    "fuse-box": "2.2.31",
+    "fuse-box": "2.3.3",
     "graphql-tag": "^2.4.2",
     "i18next-xhr-backend": "1.4.3",
     "jest": "21.2.1",
     "jquery": "3.2.1",
     "jquery-contextmenu": "2.6.2",
     "jquery-simple-upload": "1.0.0",
-    "jquery-smooth-scroll": "2.2.0",
-    "jquery-sticky": "1.0.4",
-    "lodash-cli": "4.17.4",
-    "lodash-es": "4.17.4",
+    "js-cookie": "2.1.4",
     "node-sass": "4.5.3",
     "nodemon": "1.12.1",
+    "postcss-selector-parser": "2.2.3",
     "pug-lint": "2.5.0",
     "twemoji-awesome": "1.0.6",
     "typescript": "2.5.3",
-    "uglify-es": "3.1.2",
+    "uglify-es": "3.1.3",
     "vee-validate": "2.0.0-rc.18",
     "vue": "2.4.4",
     "vue-clipboards": "1.1.0",
+    "vue-hot-reload-api": "2.1.1",
     "vue-lodash": "1.0.4",
     "vue-material": "^0.7.5",
     "vue-resource": "1.3.4",
+    "vue-simple-breakpoints": "1.0.2",
     "vue-template-compiler": "2.4.4",
     "vue-template-es2015-compiler": "1.5.3",
-    "vuex": "2.4.1"
+    "vuex": "2.4.1",
+    "vuex-persistedstate": "2.0.0"
   },
   "jest": {
     "collectCoverage": false,
