--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
-    "bull": "3.2.0",
+    "bull": "3.3.0",
     "bunyan": "1.8.12",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
@@ -66,7 +66,7 @@
     "graphql": "0.10.5",
     "graphql-tools": "2.2.1",
     "highlight.js": "9.12.0",
-    "i18next": "9.0.1",
+    "i18next": "9.1.0",
     "i18next-express-middleware": "1.0.7",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
@@ -76,7 +76,6 @@
     "js-yaml": "3.10.0",
     "jsonwebtoken": "8.0.1",
     "klaw": "2.1.0",
-    "levelup": "1.3.9",
     "lodash": "4.17.4",
     "markdown-it": "8.4.0",
     "markdown-it-abbr": "1.0.4",
@@ -89,7 +88,6 @@
     "markdown-it-mathjax": "2.0.0",
     "markdown-it-task-lists": "2.0.1",
     "mathjax-node": "1.2.1",
-    "memdown": "1.4.1",
     "mime-types": "2.1.17",
     "moment": "2.18.1",
     "moment-timezone": "0.5.13",
@@ -106,21 +104,19 @@
     "passport-local": "1.0.0",
     "passport-slack": "0.0.7",
     "passport-windowslive": "1.0.2",
-    "pg": "7.3.0",
+    "pg": "6.4.2",
     "pg-hstore": "2.3.2",
     "pg-promise": "6.10.3",
     "pm2": "2.7.1",
     "pug": "2.0.0-rc.4",
+    "qr-image": "3.2.0",
     "read-chunk": "2.1.0",
     "remove-markdown": "0.2.2",
     "request": "2.83.0",
-    "search-index-adder": "0.3.9",
-    "search-index-searcher": "0.2.10",
     "semver": "5.4.1",
     "sequelize": "4.13.5",
     "serve-favicon": "2.4.5",
     "simplemde": "1.11.2",
-    "stopword": "0.1.8",
     "stream-to-promise": "2.2.0",
     "tar": "4.0.1",
     "through2": "2.0.3",
@@ -135,6 +131,7 @@
     "apollo-client": "^1.9.3",
     "autoprefixer": "7.1.5",
     "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
     "babel-jest": "21.2.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "6.24.1",
