--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "graphql-tag": "^2.4.2",
     "i18next-xhr-backend": "1.4.3",
     "jest": "21.2.1",
+    "jest-junit": "3.1.0",
     "jquery": "3.2.1",
     "jquery-contextmenu": "2.6.2",
     "jquery-simple-upload": "1.0.0",
