--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -39,6 +39,11 @@ configNamespaces:
 queues:
   - gitSync
   - uplClearTemp
+telemetry:
+  BUGSNAG_ID: 'bb4b324d0675bcbba10025617fd2cec8'
+  BUGSNAG_REMOTE: 'https://notify.bugsnag.com'
+  GA_ID: 'UA-9094100-7'
+  GA_REMOTE: 'https://www.google-analytics.com/collect'
 authProviders:
   - local
   - microsoft
