--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
   "puglint.enable": true,
   "standard.enable": false,
   "editor.formatOnSave": false,
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "eslint.validate": [
+    "javascript",
+    "vue"
+  ]
 }
