Use auth.defaultAccess, where default accounts can have write access

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -18,7 +18,7 @@ defaults:
     langRtl: false
     public: false
     auth:
-      defaultReadAccess: false
+      defaultAccess: false
       local:
         enabled: true
       microsoft:
