feat: config wizard UI improv. + upgrade from Mongo

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,8 +3,9 @@ extends:
   - plugin:vue/recommended
 env:
   node: true
-  es6: true
   jest: true
+parserOptions:
+  ecmaVersion: 2017
 globals:
   document: false
   navigator: false
