--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node wiki start",
     "stop": "node wiki stop",
     "restart": "node wiki restart",
-    "build": "node tools/fuse",
-    "dev": "node tools/fuse -d",
+    "build": "node dev/fuse --build",
+    "dev": "node dev/fuse --dev",
     "test": "eslint --ext .js,.vue . && jest"
   },
   "bin": {
@@ -115,6 +115,7 @@
     "read-chunk": "2.1.0",
     "remove-markdown": "0.2.2",
     "request": "2.83.0",
+    "request-promise": "4.2.2",
     "semver": "5.4.1",
     "sequelize": "4.22.6",
     "serve-favicon": "2.4.5",
