--- a/package.json
+++ b/package.json
@@ -33,17 +33,17 @@
   },
   "homepage": "https://github.com/Requarks/wiki#readme",
   "engines": {
-    "node": ">=8.8.1"
+    "node": ">=8.9.3"
   },
   "dependencies": {
-    "apollo-server-express": "1.2.0",
+    "apollo-server-express": "1.3.0",
     "auto-load": "3.0.0",
     "axios": "0.17.1",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
     "bugsnag": "2.0.1",
-    "bull": "3.3.6",
+    "bull": "3.3.7",
     "bunyan": "1.8.12",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
@@ -59,24 +59,24 @@
     "express-brute": "1.0.1",
     "express-brute-redis": "0.0.1",
     "express-session": "1.15.6",
-    "file-type": "7.2.0",
+    "file-type": "7.4.0",
     "filesize.js": "1.0.2",
-    "follow-redirects": "1.2.5",
-    "fs-extra": "4.0.2",
+    "follow-redirects": "1.2.6",
+    "fs-extra": "5.0.0",
     "git-wrapper2-promise": "0.2.9",
-    "graphql": "0.11.7",
-    "graphql-tools": "2.7.2",
+    "graphql": "0.12.1",
+    "graphql-tools": "2.13.0",
     "highlight.js": "9.12.0",
-    "i18next": "10.0.7",
-    "i18next-express-middleware": "1.0.7",
+    "i18next": "10.2.1",
+    "i18next-express-middleware": "1.0.9",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
-    "image-size": "0.6.1",
-    "ioredis": "3.2.1",
+    "image-size": "0.6.2",
+    "ioredis": "3.2.2",
     "jimp": "0.2.28",
     "js-yaml": "3.10.0",
     "jsonwebtoken": "8.1.0",
-    "klaw": "2.1.0",
+    "klaw": "2.1.1",
     "lodash": "4.17.4",
     "markdown-it": "8.4.0",
     "markdown-it-abbr": "1.0.4",
@@ -90,9 +90,9 @@
     "markdown-it-task-lists": "2.1.0",
     "mathjax-node": "1.2.1",
     "mime-types": "2.1.17",
-    "moment": "2.19.2",
+    "moment": "2.20.0",
     "moment-timezone": "0.5.14",
-    "mongodb": "2.2.33",
+    "mongodb": "3.0.0-rc0",
     "multer": "1.3.0",
     "node-2fa": "1.1.2",
     "node-graceful": "0.2.3",
@@ -106,10 +106,10 @@
     "passport-local": "1.0.0",
     "passport-slack": "0.0.7",
     "passport-windowslive": "1.0.2",
-    "pg": "7.4.0",
+    "pg": "6.4.2",
     "pg-hstore": "2.3.2",
-    "pg-promise": "7.3.1",
-    "pm2": "2.7.2",
+    "pg-promise": "7.3.2",
+    "pm2": "2.9.1",
     "pug": "2.0.0-rc.4",
     "qr-image": "3.2.0",
     "read-chunk": "2.1.0",
@@ -117,65 +117,65 @@
     "request": "2.83.0",
     "request-promise": "4.2.2",
     "semver": "5.4.1",
-    "sequelize": "4.22.6",
+    "sequelize": "4.28.5",
     "serve-favicon": "2.4.5",
     "simplemde": "1.11.2",
     "stream-to-promise": "2.2.0",
-    "tar": "4.0.2",
+    "tar": "4.1.1",
     "through2": "2.0.3",
     "uuid": "3.1.0",
-    "validator": "9.1.1",
+    "validator": "9.2.0",
     "validator-as-promised": "1.0.2",
     "winston": "2.4.0",
     "yargs": "10.0.3"
   },
   "devDependencies": {
     "@glimpse/glimpse": "0.22.15",
-    "@panter/vue-i18next": "0.8.1",
-    "apollo-client-preset": "1.0.2",
-    "autoprefixer": "7.1.6",
+    "@panter/vue-i18next": "0.9.1",
+    "apollo-client-preset": "1.0.5",
+    "autoprefixer": "7.2.3",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-jest": "21.2.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
-    "brace": "0.10.0",
+    "brace": "0.11.0",
     "colors": "1.1.2",
     "consolidate": "0.15.0",
-    "eslint": "4.11.0",
+    "eslint": "4.13.1",
     "eslint-config-requarks": "1.0.7",
-    "eslint-config-standard": "10.2.1",
+    "eslint-config-standard": "11.0.0-beta.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-node": "5.2.1",
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
     "eslint-plugin-vue": "3.13.1",
     "fuse-box": "2.5.0-beta.1",
-    "graphql-tag": "^2.5.0",
+    "graphql-tag": "^2.6.0",
     "i18next-xhr-backend": "1.5.0",
     "jest": "21.2.1",
-    "jest-junit": "3.1.0",
+    "jest-junit": "3.4.0",
     "js-cookie": "2.2.0",
-    "node-sass": "4.6.1",
-    "nodemon": "1.12.1",
+    "node-sass": "4.7.2",
+    "nodemon": "1.13.3",
     "postcss-selector-parser": "3.1.1",
     "pug-lint": "2.5.0",
     "twemoji-awesome": "1.0.6",
-    "typescript": "2.6.1",
-    "uglify-es": "3.1.9",
-    "vee-validate": "2.0.0-rc.21",
-    "vue": "2.5.3",
-    "vue-clipboards": "1.1.0",
-    "vue-hot-reload-api": "2.2.3",
+    "typescript": "2.6.2",
+    "uglify-es": "3.2.2",
+    "vee-validate": "2.0.0-rc.27",
+    "vue": "2.5.11",
+    "vue-clipboards": "1.2.0",
+    "vue-hot-reload-api": "2.2.4",
     "vue-lodash": "1.0.4",
     "vue-material": "^0.8.1",
     "vue-resource": "1.3.4",
     "vue-simple-breakpoints": "1.0.3",
-    "vue-template-compiler": "2.5.3",
+    "vue-template-compiler": "2.5.11",
     "vue-template-es2015-compiler": "1.6.0",
     "vuex": "3.0.1",
-    "vuex-persistedstate": "2.3.2"
+    "vuex-persistedstate": "2.4.2"
   },
   "jest": {
     "testResultsProcessor": "./node_modules/jest-junit",
